# tmp-emlb-v2

./: .gitignore  CMakeLists.txt  README.md  convert_to_std.py  demo.py  run_denoisors.py  run_event_denoisors.py  test_esr.py  view.py
include/: kore.hpp
options/: dataset_info.yaml  denoisors.py  options.py
src/_denoisor/: CMakeLists.txt
src/_denoisor/_template/: CMakeLists.txt
src/_denoisor/double_window_filter/: CMakeLists.txt  _module_dv.cpp  _module_py.cpp  double_window_filter.hpp
src/_denoisor/event_flow/: CMakeLists.txt
src/_denoisor/khodamoradi_noise/: CMakeLists.txt  _module_py.cpp  khodamoradi_noise.hpp
src/_denoisor/multiLayer_perceptron_filter/: CMakeLists.txt  _module_py.cpp  multiLayer_perceptron_filter.hpp
src/_denoisor/reclusive_event_denoisor/: CMakeLists.txt  _module_dv.cpp  _module_py.cpp
src/_denoisor/time_surface/: CMakeLists.txt  _module_dv.cpp  _module_py.cpp
src/_denoisor/yang_noise/: CMakeLists.txt  _module_py.cpp  yang_noise.hpp
